--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@babel/runtime": "7.17.7",
     "@react-native-community/eslint-config": "3.0.1",
     "babel-jest": "27.5.1",
+    "cross-env": "^7.0.3",
     "eslint": "8.11.0",
     "jest": "27.5.1",
     "metro-react-native-babel-preset": "0.69.1",
