--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
      <queries>
     <package android:name="com.google.android.apps.maps" />
   </queries>
-  
+
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
@@ -22,6 +22,7 @@
      android:value="AIzaSyCrYvbk8juHM0IxdHqYd5WxMV5oOIkW1p0"/>
       <activity
         android:name=".MainActivity"
+        android:exported="true"
         android:label="@string/app_name"
         android:configChanges="keyboard|keyboardHidden|orientation|screenSize|uiMode"
         android:launchMode="singleTask"
@@ -37,19 +38,21 @@
     <!-- Change the resource name to your App's accent color - or any other color you want -->
     <meta-data android:name="com.dieam.reactnativepushnotification.notification_color" android:resource="@color/white" /> <!-- or @android:color/{name} to use a standard color -->
 
-    <receiver android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationActions" />
-    <receiver android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationPublisher" />
-    <receiver android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationBootEventReceiver">
+    <receiver android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationActions" android:exported="true" />
+    <receiver android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationPublisher" android:exported="true" />
+    <receiver android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationBootEventReceiver" android:exported="true">
       <intent-filter>
         <action android:name="android.intent.action.BOOT_COMPLETED" />
         <action android:name="android.intent.action.QUICKBOOT_POWERON" />
         <action android:name="com.htc.intent.action.QUICKBOOT_POWERON" />
       </intent-filter>
     </receiver>
-   <service android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationListenerService" android:exported="false">
-      <intent-filter>
+   <service android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationListenerService"
+    android:exported="true">
+    <intent-filter>
         <action android:name="com.google.firebase.MESSAGING_EVENT" />
-      </intent-filter>
+    </intent-filter>
     </service>
+
     </application>
 </manifest>
